8 April 2013: Wouter
	- OSX wake listener implementation.
	- patch for OSX that passes all domains from search to the OS (from
	  Phil Pennock).

27 March 2013: Wouter
	- update makedist for new svn and new crosscompile environment.

26 March 2013: Wouter
	- Update configure, install-sh with newer autoconf.

7 March 2013: Wouter
	- bug 489: removed Application deprecated keyword from .desktop file.

31 July 2012: Wouter
	- Fixup uniqueid for Mountain Lion OSX 10.8 release, you have to
	  run the installer again (upgrade or uninstall-reinstall).

2 July 2012: Wouter
	- Fix networkmanager hook to detect if it has to use the new
	  commandline syntax of networkmanager 0.9.4.

15 June 2012: Wouter
	- Fix crash on read of ssl443 entry without a hash.
	- Squelch address family not supported errors (on low verbosity).

8 June 2012: Wouter
	- Fix OSX user panel stop and start in reinstall, also fix for double
	  popups during reinstall.
	- lint clean.

7 June 2012: Wouter
	- tag 0.11 release.
	- trunk is 0.12 is development.
	- log correct type in timeout for TXT.
	- restart panels on install on OSX.

6 June 2012: Wouter
	- fix permissions on root key for OSX.

5 June 2012: Wouter
	- wait for old daemon to stop in osx install at setdns.sh.
	- fix OSX unbound to be able to write root.key from the chroot.
	- manpage for check-updates option.

1 June 2012: Wouter
	- Http redirect support, for plain http check, in case hotspot has
	  a proxy that starts giving the internet contents.
	- GUI for OSX for software updates.
	- fix osx execl for software install.
	- update tray icon for osx software install.
	- fix osx comma in multiple DNS servers.
	- fix update installer

31 May 2012: Wouter
	- Fix bug in processing tray icon results from daemon.
	- url can contain numerical IP address and port number, in http
	  implementation.

22 May 2012: Wouter
	- Fix windows upgrade to preserve config files and to preserve the
	  installed (or not-installed) startmenu links.